// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STOUsageInfo STOUsageInfo 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card innerCard"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey700"
            >
              common.subscriptions.usage.stoDevelopers
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <span
                  class="bp3-icon StyledProps--main infoIcon"
                  data-icon="info"
                  tabindex="0"
                >
                  <svg
                    height="15"
                    viewBox="0 0 12 12"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96zm1.846-7.352v1.03h-1.01v-1.03z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey500"
          >
            Last 30 Days
          </p>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
        >
          20
        </p>
        <div
          class="StyledProps--font StyledProps--main bar StyledProps--background-grey100 StyledProps--border StyledProps--margin-bottom-small"
          style="width: 100%; height: 10px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--background-primary6 StyledProps--border"
            style="width: 20%; height: 100%;"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
          >
            100
             
            common.subscribed
          </p>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card innerCard"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey700"
            >
              common.subscriptions.usage.stoScans
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <span
                  class="bp3-icon StyledProps--main infoIcon"
                  data-icon="info"
                  tabindex="0"
                >
                  <svg
                    height="15"
                    viewBox="0 0 12 12"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96zm1.846-7.352v1.03h-1.01v-1.03z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey500"
          >
            Last 30 Days
          </p>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-large StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
        >
          100
        </p>
        <div
          class="StyledProps--font StyledProps--main bar StyledProps--background-grey100 StyledProps--border StyledProps--margin-bottom-small"
          style="width: 100%; height: 10px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--background-primary6 StyledProps--border"
            style="width: 1%; height: 100%;"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
          >
            10K
             
            common.subscribed
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`STOUsageInfo STOUsageInfo LimitError 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="width: 300px;"
  >
    <div
      class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
      data-testid="page-error"
      style="width: 100%; height: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
          icon="error"
        >
          <svg
            data-icon="error"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              error
            </desc>
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
        >
          limit error
        </p>
        <button
          aria-label="Retry"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Retry
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`STOUsageInfo STOUsageInfo UsageError 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="width: 300px;"
  >
    <div
      class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
      data-testid="page-error"
      style="width: 100%; height: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
          icon="error"
        >
          <svg
            data-icon="error"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              error
            </desc>
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
        >
          usage error
        </p>
        <button
          aria-label="Retry"
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Retry
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`STOUsageInfo STOUsageInfo loading 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main spinner"
  >
    <div
      class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
      data-testid="page-spinner"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
          data-icon="steps-spinner"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
  </div>
</div>
`;
